导航栏自适应以及添加logo完成

--- a/www.iwntuo.com/v1.0/home/blogs.html
+++ b/www.iwntuo.com/v1.0/home/blogs.html
@@ -21,10 +21,10 @@
 
     <!-- Custom-Files --><link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
     <!-- Bootstrap-Core-CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link href='css/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/portfolio.css">
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/aos.css">
+    <link href='../../../style.iwentuo.com/v1.0/home/css/origin/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
     <!-- Style-CSS -->
     <!-- font-awesome-icons -->
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
@@ -100,7 +100,7 @@
                     <div class="row mt-lg-5 mt-3">
                         <div class="col-lg-8 blog-left-content">
                             <div class="card" data-aos="fade-up">
-                                <a href="single.html"> <img class="card-img-top" src="images/b1.jpg" alt="Card image cap"></a>
+                                <a href="single.html"> <img class="card-img-top" src="../../../style.iwentuo.com/v1.0/home/images/origin/b1.jpg" alt="Card image cap"></a>
                                 <div class="card-body">
                                     <h6 class="date"><span>
                                      By: Admin</span> Sep 20.2018</h6>
@@ -114,7 +114,7 @@
                             </div>
 
                             <div class="card my-lg-5" data-aos="fade-up">
-                                <a href="single.html">  <img class="card-img-top" src="images/b3.jpg" alt="Card image cap"></a>
+                                <a href="single.html">  <img class="card-img-top" src="../../../style.iwentuo.com/v1.0/home/images/origin/b3.jpg" alt="Card image cap"></a>
                                 <div class="card-body">
                                     <h6 class="date"><span>
                                      By: Admin</span> Sep 30.2018</h6>
@@ -128,7 +128,7 @@
                             </div>
 
                             <div class="card" data-aos="fade-up">
-                                <a href="single.html"> <img class="card-img-top" src="images/b2.jpg" alt="Card image cap"></a>
+                                <a href="single.html"> <img class="card-img-top" src="../../../style.iwentuo.com/v1.0/home/images/origin/b2.jpg" alt="Card image cap"></a>
                                 <div class="card-body">
                                     <h6 class="date"><span>
                                      By: Admin</span> Oct 11.2018</h6>
@@ -162,7 +162,7 @@
                         </div>
                         <aside class="col-lg-4 blog-sldebar-right">
                             <div class="single-gd">
-                                <img src="images/banner-w3layouts1.jpg" class="img-fluid" alt="">
+                                <img src="../../../style.iwentuo.com/v1.0/home/images/banner-w3layouts1.jpg" class="img-fluid" alt="">
                                 <h4>Sign up to our newsletter</h4>
                                 <form action="#" method="post">
 
@@ -197,7 +197,7 @@
                                 <div class="blog-grids">
                                     <div class="blog-grid-left">
                                         <a href="single.html">
-									<img src="images/b1.jpg" class="img-fluid" alt="">
+									<img src="../../../style.iwentuo.com/v1.0/home/images/origin/b1.jpg" class="img-fluid" alt="">
 								</a>
                                     </div>
                                     <div class="blog-grid-right">
@@ -211,7 +211,7 @@
                                 <div class="blog-grids">
                                     <div class="blog-grid-left">
                                         <a href="single.html">
-									<img src="images/b2.jpg" class="img-fluid" alt="">
+									<img src="../../../style.iwentuo.com/v1.0/home/images/origin/b2.jpg" class="img-fluid" alt="">
 								</a>
                                     </div>
                                     <div class="blog-grid-right">
@@ -225,7 +225,7 @@
                                 <div class="blog-grids">
                                     <div class="blog-grid-left">
                                         <a href="single.html">
-									<img src="images/b3.jpg" class="img-fluid" alt="">
+									<img src="../../../style.iwentuo.com/v1.0/home/images/origin/b3.jpg" class="img-fluid" alt="">
 								</a>
                                     </div>
                                     <div class="blog-grid-right">
@@ -472,7 +472,7 @@
     </div>
     <!--//Register--><script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
     <!--/aos -->
-    <script src="js/aos.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/aos.js"></script>
     <script>
         AOS.init({
             easing: 'ease-out-back',
@@ -482,8 +482,8 @@
     </script>
     <!--//aos -->
     <!--/ start-smoth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/move-top.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
