--- a/www.iwntuo.com/v1.0/home/single.html
+++ b/www.iwntuo.com/v1.0/home/single.html
@@ -21,9 +21,9 @@
 
     <!-- Custom-Files --><link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
     <!-- Bootstrap-Core-CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/aos.css">
-    <link href='css/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/aos.css">
+    <link href='../../../style.iwentuo.com/v1.0/home/css/origin/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
     <!-- Style-CSS -->
     <!-- font-awesome-icons -->
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
@@ -100,7 +100,7 @@
 
                         <div class="col-lg-8 blog-left-content">
                             <div class="card" data-aos="fade-up">
-                                <img class="card-img-top" src="images/b1.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="../../../style.iwentuo.com/v1.0/home/images/origin/b1.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h6 class="date"><span>
                                      By: Admin</span> Sep 20.2018</h6>
@@ -117,14 +117,14 @@
                             <div class="comment-top">
                                 <h4>Comments</h4>
                                 <div class="media">
-                                    <img src="images/te1.jpg" alt="" class="img-fluid" />
+                                    <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te1.jpg" alt="" class="img-fluid" />
                                     <div class="media-body">
                                         <h5 class="mt-0">Joseph Goh</h5>
                                         <p>Lorem Ipsum convallis diam consequat magna vulputate malesuada. id dignissim sapien velit id felis ac cursus eros. Cras a ornare elit.</p>
 
                                         <div class="media mt-3">
                                             <a class="d-flex pr-3" href="#">
-										<img src="images/te2.jpg" alt="" class="img-fluid" />
+										<img src="../../../style.iwentuo.com/v1.0/home/images/origin/te2.jpg" alt="" class="img-fluid" />
 									</a>
                                             <div class="media-body" data-aos="fade-up">
                                                 <h5 class="mt-0">Richard Spark</h5>
@@ -174,7 +174,7 @@
                         </div>
                         <aside class="col-lg-4 blog-sldebar-right">
                             <div class="single-gd">
-                                <img src="images/banner-w3layouts1.jpg" class="img-fluid" alt="">
+                                <img src="../../../style.iwentuo.com/v1.0/home/images/banner-w3layouts1.jpg" class="img-fluid" alt="">
                                 <h4>Sign up to our newsletter</h4>
                                 <form action="#" method="post">
 
@@ -209,7 +209,7 @@
                                 <div class="blog-grids">
                                     <div class="blog-grid-left">
                                         <a href="single.html">
-									<img src="images/img1.jpg" class="img-fluid" alt="">
+									<img src="../../../style.iwentuo.com/v1.0/home/images/origin/img1.jpg" class="img-fluid" alt="">
 								</a>
                                     </div>
                                     <div class="blog-grid-right">
@@ -223,7 +223,7 @@
                                 <div class="blog-grids">
                                     <div class="blog-grid-left">
                                         <a href="single.html">
-									<img src="images/img2.jpg" class="img-fluid" alt="">
+									<img src="../../../style.iwentuo.com/v1.0/home/images/origin/img2.jpg" class="img-fluid" alt="">
 								</a>
                                     </div>
                                     <div class="blog-grid-right">
@@ -237,7 +237,7 @@
                                 <div class="blog-grids">
                                     <div class="blog-grid-left">
                                         <a href="single.html">
-									<img src="images/img.jpg" class="img-fluid" alt="">
+									<img src="../../../style.iwentuo.com/v1.0/home/images/origin/img.jpg" class="img-fluid" alt="">
 								</a>
                                     </div>
                                     <div class="blog-grid-right">
@@ -488,7 +488,7 @@
     </div>
     <!--//Register--><script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
     <!--/aos -->
-    <script src="js/aos.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/aos.js"></script>
     <script>
         AOS.init({
             easing: 'ease-out-back',
@@ -498,8 +498,8 @@
     </script>
     <!--//aos -->
     <!--/ start-smoth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/move-top.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
