--- a/www.iwntuo.com/v1.0/home/about.html
+++ b/www.iwntuo.com/v1.0/home/about.html
@@ -21,10 +21,10 @@
 
     <!-- Custom-Files --><link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
     <!-- Bootstrap-Core-CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link href='css/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/portfolio.css">
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/aos.css">
+    <link href='../../../style.iwentuo.com/v1.0/home/css/origin/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
     <!-- Style-CSS -->
     <!-- font-awesome-icons -->
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
@@ -103,7 +103,7 @@
                         <p class="mb-4 col-md-6" data-aos="fade-up"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nulla mollis dapibus nunc, ut rhoncus turpis sodales quis. Integer sit amet mattis quam, sit amet ultricies velit. Praesent ullamcorper dui turpis.Integer sit amet mattis quam, sit amet ultricies velit. Praesent ullamcorper dui turpis.</p>
 
                     </div>
-                    <img src="images/img3.jpg" class="img-fluid" alt="">
+                    <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img3.jpg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -185,7 +185,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 p-0">
-                            <img src="images/img1.jpg" class="img-fluid" alt="">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img1.jpg" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                 <div class="row mt-lg-5 mt-4">
                     <div class="col-md-4 team-gd text-center" data-aos="fade-up">
                         <div class="team-img mb-4">
-                            <img src="images/team.jpg" class="img-fluid rounded-circle" alt="user-image">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/team.jpg" class="img-fluid rounded-circle" alt="user-image">
                         </div>
                         <div class="team-info">
                             <h3 class="mt-md-4 mt-3"><span class="sub-tittle-team">Designer</span> Jason Donoghue</h3>
@@ -252,7 +252,7 @@
 
                     <div class="col-md-4 team-gd second text-center" data-aos="fade-up">
                         <div class="team-img mb-4">
-                            <img src="images/team1.jpg" class="img-fluid rounded-circle" alt="user-image">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/team1.jpg" class="img-fluid rounded-circle" alt="user-image">
                         </div>
                         <div class="team-info">
                             <h3 class="mt-md-4 mt-3"><span class="sub-tittle-team">Designer</span> Mariana Noe</h3>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-md-4 team-gd text-center" data-aos="fade-up">
                         <div class="team-img mb-4">
-                            <img src="images/team2.jpg" class="img-fluid rounded-circle" alt="user-image">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/team2.jpg" class="img-fluid rounded-circle" alt="user-image">
                         </div>
                         <div class="team-info">
                             <h3 class="mt-md-4 mt-3"><span class="sub-tittle-team">Designer</span> Daniel Doe</h3>
@@ -288,10 +288,10 @@
             <div class="row banner-w3layouts-grids">
                 <div class="col-lg-6 banner-w3layouts-image">
                     <div class="effect-w3">
-                        <img src="images/img2.jpg" alt="" class="img-fluid image1">
-                        <img src="images/img2.jpg" alt="" class="img-fluid image2">
-                        <img src="images/img2.jpg" alt="" class="img-fluid image3">
-                        <img src="images/img2.jpg" alt="" class="img-fluid image4">
+                        <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img2.jpg" alt="" class="img-fluid image1">
+                        <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img2.jpg" alt="" class="img-fluid image2">
+                        <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img2.jpg" alt="" class="img-fluid image3">
+                        <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img2.jpg" alt="" class="img-fluid image4">
                     </div>
 
                 </div>
@@ -324,7 +324,7 @@
                                     </p>
                                     <div class="row mt-4">
                                         <div class="col-3 testi-img-res">
-                                            <img src="images/te1.jpg" alt=" " class="img-fluid rounded-circle" />
+                                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te1.jpg" alt=" " class="img-fluid rounded-circle" />
                                         </div>
                                         <div class="col-9 testi_grid mt-xl-3 mt-lg-2 mt-md-4 mt-2">
                                             <h5 class="mb-2">Thomas Carl</h5>
@@ -339,7 +339,7 @@
                                     </p>
                                     <div class="row mt-4">
                                         <div class="col-3 testi-img-res">
-                                            <img src="images/te2.jpg" alt=" " class="img-fluid rounded-circle" />
+                                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te2.jpg" alt=" " class="img-fluid rounded-circle" />
                                         </div>
                                         <div class="col-9 testi_grid  mt-xl-3 mt-lg-2 mt-md-4 mt-2">
                                             <h5 class="mb-2">Adam Ster</h5>
@@ -358,7 +358,7 @@
                                     </p>
                                     <div class="row mt-4">
                                         <div class="col-3 testi-img-res">
-                                            <img src="images/te3.jpg" alt=" " class="img-fluid rounded-circle" />
+                                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te3.jpg" alt=" " class="img-fluid rounded-circle" />
                                         </div>
                                         <div class="col-9 testi_grid  mt-xl-3 mt-lg-2 mt-md-4 mt-2">
                                             <h5 class="mb-2">Thomas Carl</h5>
@@ -373,7 +373,7 @@
                                     </p>
                                     <div class="row mt-4">
                                         <div class="col-3 testi-img-res">
-                                            <img src="images/te1.jpg" alt=" " class="img-fluid rounded-circle" />
+                                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te1.jpg" alt=" " class="img-fluid rounded-circle" />
                                         </div>
                                         <div class="col-9 testi_grid  mt-xl-3 mt-lg-2 mt-md-4 mt-2">
                                             <h5 class="mb-2">Adam Ster</h5>
@@ -392,7 +392,7 @@
                                     </p>
                                     <div class="row mt-4">
                                         <div class="col-3 testi-img-res">
-                                            <img src="images/te2.jpg" alt=" " class="img-fluid rounded-circle" />
+                                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te2.jpg" alt=" " class="img-fluid rounded-circle" />
                                         </div>
                                         <div class="col-9 testi_grid  mt-xl-3 mt-lg-2 mt-md-4  mt-2">
                                             <h5 class="mb-2">Thomas Carl</h5>
@@ -407,7 +407,7 @@
                                     </p>
                                     <div class="row mt-4">
                                         <div class="col-3 testi-img-res">
-                                            <img src="images/te3.jpg" alt=" " class="img-fluid rounded-circle" />
+                                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/te3.jpg" alt=" " class="img-fluid rounded-circle" />
                                         </div>
                                         <div class="col-9 testi_grid mt-xl-3 mt-lg-2 mt-md-4 mt-2">
                                             <h5 class="mb-2">Adam Ster</h5>
@@ -600,7 +600,7 @@
     </div>
     <!--//Register--><script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
     <!--/aos -->
-    <script src="js/aos.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/aos.js"></script>
     <script>
         AOS.init({
             easing: 'ease-out-back',
@@ -610,11 +610,11 @@
     </script>
     <!--//aos -->
     <!--/counter-->
-    <script src="js/counternew.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/counternew.js"></script>
     <!--//counter-->
     <!--/ start-smoth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/move-top.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
