--- a/www.iwntuo.com/v1.0/home/signin.html
+++ b/www.iwntuo.com/v1.0/home/signin.html
@@ -21,10 +21,10 @@
 
     <!-- Custom-Files --><link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
     <!-- Bootstrap-Core-CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="css/portfolio.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link href='css/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/portfolio.css">
+    <link rel="stylesheet" href="../../../style.iwentuo.com/v1.0/home/css/origin/aos.css">
+    <link href='../../../style.iwentuo.com/v1.0/home/css/origin/aos-animation.css' rel='stylesheet prefetch' type="text/css" media="all" />
     <!-- Style-CSS -->
     <!-- font-awesome-icons -->
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
@@ -123,10 +123,10 @@
                     </div>
                     <div class="col-lg-7 banner-w3layouts-image pl-md-5">
                         <div class="effect-w3">
-                            <img src="images/img4.jpg" alt="" class="img-fluid image1">
-                            <img src="images/img4.jpg" alt="" class="img-fluid image2">
-                            <img src="images/img4.jpg" alt="" class="img-fluid image3">
-                            <img src="images/img4.jpg" alt="" class="img-fluid image4">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img4.jpg" alt="" class="img-fluid image1">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img4.jpg" alt="" class="img-fluid image2">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img4.jpg" alt="" class="img-fluid image3">
+                            <img src="../../../style.iwentuo.com/v1.0/home/images/origin/img4.jpg" alt="" class="img-fluid image4">
                         </div>
 
                     </div>
@@ -301,7 +301,7 @@
     </div>
     <!--//Register--><script src="http://www.jq22.com/jquery/jquery-2.1.1.js"></script>
     <!--/aos -->
-    <script src="js/aos.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/aos.js"></script>
     <script>
         AOS.init({
             easing: 'ease-out-back',
@@ -311,8 +311,8 @@
     </script>
     <!--//aos -->
     <!--/ start-smoth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/move-top.js"></script>
+    <script src="../../../style.iwentuo.com/v1.0/home/js/origin/easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
